--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
   <!-- Header section -->
-    <header>
-      
+    <header> 
         <div class="logo">
             <img src="images/logo box white.png" class="img">
             <span class="span">e-Lab LIS</span>
@@ -41,7 +40,9 @@
                     <li>
                       <i class="fas fa-vector-square"></i>
                       <a href="#">Phlebotomy</a>
-                      <i class="fas fa-arrow-down"></i>
+                        <i class="fas fa-arrow-down"></i>
+                      <!-- <a href="#">Phlebotomy</a>
+                      <i class="fas fa-arrow-down"></i> -->
                     </li>
                     <li>
                         <i class="fas fa-flask"></i>
@@ -76,7 +77,7 @@
                     <li>
                       <i class="fas fa-archive"></i>
                       <a href="#">Inventory</a>
-                      <i class="fas fa-arrow-down"></i>
+                      <i class="fas fa-arrow-up"></i>
                     </li>
                 </ul>
             </nav>
