--- a/index.html
+++ b/index.html
@@ -98,8 +98,16 @@
     </div>
 
     <!-- Footer section -->
-    <footer>
+    <!-- <footer>
         <p class="about">e-Lab LIS by Netwalkers.NG (c) 2022. All rights reserved | About us | Contact Us | Terms of Services | Privacy Policy</p>
-    </footer>
+    </footer> -->
+    <footer>
+      <p class="about">e-Lab LIS by Netwalkers.NG (c) 2022. All rights reserved | 
+          <a href="#">About Us</a> | 
+          <a href="#">Contact Us</a> | 
+          <a href="#">Terms of Services</a> | 
+          <a href="#">Privacy Policy</a>
+      </p>
+  </footer>
 </body>
 </html>
