--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="top-header">
       <section>
         <div class="span">
-        <img src="images/logo box white.png">
-        <h1>e-Lab LIS</h1>
+          <img src="images/logo box white.png">
+          <h1>e-Lab LIS</h1>
         </div>
 
         <svg
@@ -45,9 +45,9 @@
         </svg>
         <h2>Your Laboratory Name</h2>
       </section>
-      <section>
-        <img src="images/bell.png" class="user-icon">
-        <img src="images/avater.png" class="user-icon">
+      <section class="name">
+        <img src="images/bell.png">
+        <img src="images/avater.png">
         <p>Isaac Odinaka</p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -211,7 +211,7 @@
         <!-- Main content -->
         <main>
           <div class="blank-heading">
-            <!-- <svg
+            <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
               width="20px"
@@ -221,7 +221,7 @@
               <path
                 d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
               />
-            </svg> -->
+            </svg>
             <p>Drug Prescription Page</p>
             <div>
               <p>Home</p>
@@ -303,33 +303,6 @@
             </table>
           </div>
 
-          <!-- <div class="add-prescription-form">
-              <form>
-                <div>
-                  <div class="branding">Search Medicine brand</div>
-                  <input type="text" placeholder="Search medicine brand" class="input-field-1" />
-                  <div class="help-text">
-                    <h4>Emzor Paracetamol Tab 250mg</h4>
-                    <span>(10 sanchet left)</span>
-                  </div>
-                </div>
-                <div>
-                  <div class="branding">Interval</div>
-                  <input type="text" placeholder="Enter interval" class="input-field-2" />
-                </div>
-                <div>
-                  <div class="branding">Special Instruction</div>
-                  <input type="text" placeholder="enter instruction" class="input-field-3" />
-                </div>
-                <div>
-                  <div class="branding">Duration</div>
-                  <input type="text" placeholder="enter brand" class="input-field-4" />
-                </div>
-                <div class="button">
-                  <button type="button" class="add-btn">Add</button>
-                </div>
-              </form>
-          </div> -->
           <div class="add-drug">
             <div>
               <p>Search Medicine brand</p>
@@ -364,19 +337,49 @@
 
     </div>
 
-    <div class="button-section">
+    <footer>
+      <div>
+        <button>
+          <p>Next</p>
+          <img src="./images/arrow.png" />
+        </button>
+      </div>
+      <section>
+        <p>e-Lab LIS by Netwalkers NG (c) 2022. All right reserved</p>
+        <div class="items">
+          <p>About Us</p>
+          <p>Contact Us</p>
+          <p>Terms Of Service</p>
+          <p>Privacy Policy</p>
+        </div>
+      </section>
+    </footer>
+
+    <!-- <div class="button-section">
       <button>
         <p>Next</p>
         <img src="./images/arrow.png" />
       </button>
-    </div>
-    <footer>
+    </div> -->
+    <!-- <footer>
       <p class="about">e-Lab LIS by Netwalkers.NG (c) 2022. All rights reserved | 
         <a href="#">About Us</a> | 
         <a href="#">Contact Us</a> | 
         <a href="#">Terms of Services</a> | 
         <a href="#">Privacy Policy</a>
-      </p>
-    </footer>
+      </p> -->
+      <!-- <div class="button-section">
+        <button>
+          <p>Next</p>
+          <img src="./images/arrow.png" />
+        </button>
+      </div> -->
+    <!-- </footer> -->
 </body>
 </html>
+
+<!-- @media screen and (max-width: 766px) {
+  main > div:nth-child(1) > svg {
+      display: block;
+  }
+} -->
