--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         </main>
 
     </div>
-
+    <!-- footer section -->
     <footer>
       <div>
         <button>
@@ -354,32 +354,5 @@
         </div>
       </section>
     </footer>
-
-    <!-- <div class="button-section">
-      <button>
-        <p>Next</p>
-        <img src="./images/arrow.png" />
-      </button>
-    </div> -->
-    <!-- <footer>
-      <p class="about">e-Lab LIS by Netwalkers.NG (c) 2022. All rights reserved | 
-        <a href="#">About Us</a> | 
-        <a href="#">Contact Us</a> | 
-        <a href="#">Terms of Services</a> | 
-        <a href="#">Privacy Policy</a>
-      </p> -->
-      <!-- <div class="button-section">
-        <button>
-          <p>Next</p>
-          <img src="./images/arrow.png" />
-        </button>
-      </div> -->
-    <!-- </footer> -->
 </body>
 </html>
-
-<!-- @media screen and (max-width: 766px) {
-  main > div:nth-child(1) > svg {
-      display: block;
-  }
-} -->
