--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>gym_home</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -73,6 +73,8 @@
             </tbody>
         </table>
 
+        
+
 
         <div class="membership-history" id="membershipHistory">
             <div>
@@ -118,6 +120,21 @@
               </tbody>
               </table>
             </div>
+        </div>
+
+        <div class="span">
+          <div>
+            <span>Deluxe</span>
+            <span>20</span>
+          </div>
+          <div>
+            <span>Regular</span>
+            <Span>20</Span>
+          </div>
+          <div>
+            <span>Female</span>
+            <Span>20</Span>
+          </div>
         </div>
 
         <div class="form-container" id="formContainer">
@@ -231,7 +248,8 @@
           </form>
             
 
-    </div>
+        </div>
+
     <script src="script.js"></script>
 </body>
 </html>
