--- a/index.html
+++ b/index.html
@@ -15,29 +15,28 @@
       <section>
         <div class="span">
           <img src="images/logo box white.png">
-          <h1>e-Lab LIS</h1>
+          <h1>CliniquePlus</h1>
         </div>
 
         <svg
           width="50px"
           height="50px"
           viewBox="0 0 24.00 24.00"
-          fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          stroke="#5B5B5B"
+          stroke="#fff"
         >
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g
             id="SVGRepo_tracerCarrier"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke="#5B5B5B"
+            stroke="#fff"
             stroke-width="0.096"
           ></g>
           <g id="SVGRepo_iconCarrier">
             <path
               d="M3 12H15M3 6H21M3 18H21"
-              stroke="#5B5B5B"
+              stroke="#fff"
               stroke-width="1.3679999999999999"
               stroke-linecap="round"
               stroke-linejoin="round"
