--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section>
         <div class="span">
           <img src="images/logo box white.png">
-          <h1>CliniquePlus</h1>
+          <h1>e-Lab Lis</h1>
         </div>
 
         <svg
@@ -23,20 +23,20 @@
           height="50px"
           viewBox="0 0 24.00 24.00"
           xmlns="http://www.w3.org/2000/svg"
-          stroke="#fff"
+          stroke="#5B5B5B"
         >
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g
             id="SVGRepo_tracerCarrier"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke="#fff"
+            stroke="#5B5B5B"
             stroke-width="0.096"
           ></g>
           <g id="SVGRepo_iconCarrier">
             <path
               d="M3 12H15M3 6H21M3 18H21"
-              stroke="#fff"
+              stroke="#5B5B5B"
               stroke-width="1.3679999999999999"
               stroke-linecap="round"
               stroke-linejoin="round"
@@ -384,6 +384,7 @@
           </div>
 
         </main>
+        
 
     </div>
     <!-- footer section -->
